# start1

./: README.md  pyproject.toml
start1/: sentiment-analysis-french.py  sentiment-analysis.py  speech-recognition.py
